<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="15dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/photo_profile"
        android:src="@drawable/photo_"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/foto"
        app:civ_border_width="2dp"
        app:civ_border_color="#009fbf"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/photo_profile">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textSize="20sp"
        android:id="@+id/nim" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/hobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobi"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textSize="15sp"/>

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_alamat"
        android:id="@+id/btn_alamat"
        android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_telfon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_telfon"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_emaill"
            android:id="@+id/btn_email"
            android:padding="10dp"/>
    </LinearLayout>

</RelativeLayout>